Includes the JS file of the "on-line" version.

--- a/on-line/dayTypeFilter/index.html
+++ b/on-line/dayTypeFilter/index.html
@@ -205,6 +205,6 @@
       </div>
 
 
-      <script type="text/javascript" src="require.js" data-main="main.js"></script>
+      <script type="text/javascript" src="https://raw.githubusercontent.com/WillisXChen/bootstrap-daterangepicker/master/on-line/dayTypeFilter/require.js" data-main="https://raw.githubusercontent.com/WillisXChen/bootstrap-daterangepicker/master/on-line/dayTypeFilter/main.js"></script>
    </body>
 </html>
