--- a/off-line/dayTypeFilter/index.html
+++ b/off-line/dayTypeFilter/index.html
@@ -5,12 +5,7 @@
       <title>A date range picker for Bootstrap</title>
       <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" media="all" href="../../daterangepicker.css" />
-      <style type="text/css">
-      .demo { position: relative; }
-      .demo i {
-        position: absolute; bottom: 10px; right: 24px; top: auto; cursor: pointer;
-      }
-      </style>
+      <link rel="stylesheet" type="text/css" media="all" href="../../daytypefilter.css" />
    </head>
    <body style="margin: 60px 0">
 
@@ -21,7 +16,7 @@
 
         <div class="row">
 
-          <div class="col-md-4 col-md-offset-2 demo">
+          <div class="col-md-4 col-md-offset-2 daytypefilter">
             <h4>Your Date Range Picker</h4>
             <input type="text" id="config-demo" class="form-control date_range_selection">
             <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
