--- a/on-line/dayTypeFilter/index.html
+++ b/on-line/dayTypeFilter/index.html
@@ -4,8 +4,7 @@
       <meta charset="UTF-8" />
       <title>A date range picker for Bootstrap</title>
       <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" media="all" href="../../daterangepicker.css" />
-      <link rel="stylesheet" type="text/css" media="all" href="../../daytypefilter.css" />
+      <link rel="stylesheet" type="text/css" media="all" href="https://github.com/WillisXChen/bootstrap-daterangepicker/blob/master/daterangepicker.css" />
    </head>
    <body style="margin: 60px 0">
 
