--- a/off-line/dayTypeFilter/index.html
+++ b/off-line/dayTypeFilter/index.html
@@ -33,7 +33,7 @@
 
           <div class="col-md-4 col-md-offset-2 daytypefilter">
             <h4>Your Date Range Picker</h4>
-            <input type="text" name="config-demo-2" class="form-control date_range_selection">
+            <input type="text" name="config-demo-2" class="form-control date_range_selection" startdate = "01/01/2017" enddate = "05/01/2017" >
             <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
             <!--
             Hidden Inputs for Date Ranage Picker:
